# torchcdt

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: basic_usage.py  cdt_properties.py  dataset.py  linmnist_classification.ipynb  linmnist_classification.py
tests/: test_torchcdt.py
torchcdt/: functional.py  helpers.py
