[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcdt"
version = "0.0.1"
description = "A differentiable implementation of the (Radon-) Cumulative Distribution Transform in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tom Lütjen", email = "tom.luetjen@icloud.com" }]
keywords = ["pytorch", "classification", "feature-extraction", "optimal-transport"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = ["torch>=2.2", "torchskradon>=0.1.1"]

[project.optional-dependencies]
tests = [
  "torchvision>=0.17",
  "ruff>=0.6.9",
  "scipy>=1.11",
  "torchskradon>=0.1.1",
  "matplotlib>=3.8",
  "pytest>=8.2",
  "pytest-benchmark>=4.0",
  "pytest-cov>=5.0",
]
dev = [
  "torchvision>=0.17",
  "ruff>=0.6.9",
  "scipy>=1.11",
  "torchskradon>=0.1.1",
  "matplotlib>=3.8",
  "pytest>=8.2",
  "pytest-benchmark>=4.0",
  "pytest-cov>=5.0",
]

[project.urls]
Repository = "https://github.com/tomluetjen/torchcdt.git"
Issues = "https://github.com/tomluetjen/torchcdt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchcdt*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["torchcdt"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]